--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.container {
+  cursor: url('https://cdn.custom-cursor.com/db/cursor/32/Bongo_Cat_Cursor.png'), pointer;
+}
+
+.container.hover {
+  cursor: url('https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png'), pointer;
+}
 
 /* #root {
   max-width: 1280px;
