--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 body {
-  cursor: url('./assets/cursor2.png'), pointer;
   margin: 0;
-
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(to bottom, black, #353333);
+  background-image: linear-gradient(to bottom, black, #353333);
+  cursor: url('https://cdn.custom-cursor.com/db/cursor/32/Bongo_Cat_Cursor.png'), pointer;
 }
 
 
@@ -13,7 +12,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-/*
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -27,6 +26,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
+  cursor: url('https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png'), pointer;
 }
 button:focus,
 button:focus-visible {
@@ -45,4 +45,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-*/
