--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -10,6 +10,19 @@
 .navbar {
   background-color: #2F0777;
   transition: background-color 0.3s ease;
+  display: flex;
+}
+
+img, svg {
+  width: 5%;
+  margin-right: 5%;
+}
+
+.nav-der {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  background-color: aqua !important;
 }
 
 .navbar-nav .nav-link {
@@ -59,4 +72,10 @@
 
 .dropdown-item:hover {
   color: var(--text-color);
+}
+
+.navbar-nav .nav-link:hover {
+  transition: 0.4s;
+  transform: translateY(-5px);
+  cursor: url('https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png'), pointer;
 }
