--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -11,6 +11,7 @@
   background-color: #2F0777;
   transition: background-color 0.3s ease;
   display: flex;
+  flex-direction: row;
 }
 
 img, svg {
@@ -18,25 +19,26 @@ img, svg {
   margin-right: 5%;
 }
 
-.nav-der {
+.navName{
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  background-color: aqua !important;
-}
-
-.navbar-nav .nav-link {
-  color: var(--text-color);
-  transition: color 0.3s ease;
-}
-
-.navbar-nav .nav-link.active {
   color: #fff;
 }
 
-.navbar-nav .nav-link.dropdown-toggle {
-  color: var(--text-color);
+.linkNav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  color: #fff !important;
   transition: color 0.3s ease;
+}
+
+.contactNav{
+  background-color: #fff;
+  border-radius: 16px;
+}
+
+.linkNav.active {
+  color: #df2929;
 }
 
 .dropdown-menu {
@@ -52,29 +54,16 @@ img, svg {
   
 }
 
-.navbar-nav .nav-link:hover {
-  color: var(--text-color);
+.linkNav:hover {
+  color: white;
   text-decoration: underline; 
 }
 
-.navbar-nav .nav-link.active:hover {
-  color: #fff;
+.linkNav.active:hover {
+  color: #e41a1a;
 }
 
-.navbar-nav .nav-link.dropdown-toggle:hover {
-  color: var(--text-color);
-}
-
-.dropdown-menu:hover {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.dropdown-item:hover {
-  color: var(--text-color);
-}
-
-.navbar-nav .nav-link:hover {
+.linkNav:hover {
   transition: 0.4s;
   transform: translateY(-5px);
   cursor: url('https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png'), pointer;
