--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -23,17 +23,23 @@
 
 .banner img {
   display: flex;
-  width: 78.7vw;
+  width: 84vw;
   margin: 0;
   padding: 0;
+  z-index: 1;
+  margin-left: 200px;
+  margin-top: 8px;
 }
 
 .yoBanner img {
   display: flex;
-  width: 20vw;
+  position: absolute;
+  width: 22vw;
   border-radius: 100%;
   margin: 0;
   padding: 0;
+  border: 5px solid white;
+  z-index: 2;
 }
 
 .pBanner {
